# arena

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pricing.json  tsconfig.json  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  scorecard.yml
examples/: arena-gate.json  regression-gate.yml
harbor/: pyproject.toml
harbor/arena_harbor/: __init__.py  agents.py  base.py  command.py  metrics.py  spec.py
harbor/tests/: test_agents.py  test_command.py  test_spec.py
src/: baseline.ts  cli.ts  orchestrator.ts  parse.ts  pricing.ts  report.ts  stats.ts  summary.ts  types.ts  workspace.ts
src/adapters/: base.ts  claude-code.ts  gemini.ts  index.ts  mock.ts  oxagen.ts  stella.ts
tasks/bug-merge-intervals/: task.json
tasks/bug-merge-intervals/solution/src/: intervals.mjs
tasks/bug-merge-intervals/verify/: intervals.test.mjs
tasks/bug-merge-intervals/workspace/src/: intervals.mjs
tasks/bug-paginate/: task.json
tasks/bug-paginate/solution/src/: paginate.mjs
tasks/bug-paginate/verify/: paginate.test.mjs
tasks/bug-query-string/: task.json
tasks/bug-query-string/verify/: query-string.test.mjs
tasks/feature-lru-cache/: task.json
tasks/feature-lru-cache/verify/: lru-cache.test.mjs
tasks/feature-rate-limiter/: task.json
tasks/feature-rate-limiter/verify/: rate-limiter.test.mjs
tasks/robustness-fetch-users/: task.json
tasks/robustness-fetch-users/verify/: users.test.mjs
test/: adapters.test.ts  baseline.test.ts  parse.test.ts  pipeline.test.ts  stats.test.ts
web/: index.html  styles.css
(+9 files in other folders)
